
Improved watches:
-using new expression parser
-up to 10 watches on screen
-watches are saved on configuration file

Improved tbblue emulation:
-updated to the last Next Version files
-can load .nex snapshot files from the command line or the ZEsarUX menus, without having to boot NextOS
-added UART Bridge emulation

Improved Adventure Text Extractor: now it supports Daad games too. So it supports Daad, Paws, Quill and Gac
Improved Visualmem: now you can see all 3 different access (write, read, opcode) at once, generating a RGB color
Improved Waveform window: now the wave adjusts automatically to the zxwindow size
Improved Hexadecimal editor: now it resizes view to zxwindow height
Improved TSConf layers menu: Added "reveal" setting to view which pixels are used by a layer
Improved Scale 0.75 function: now it has antialias
Improved Cpu Transaction Log: now logfiles can be rotated automatically


Fixed Pentagon interrupt handling: now effects on border and hi-res work almost perfect!
Fixed interrupt bug behaviour where last opcode lasts >=32 t-states and interrupt in the middle
Fixed "Jeff Braine" manufacturer to "New Horizons". Changed Prism machine name to "Prism 512"
Fixed bug having more than 256 text to adventure keyboard words
Fixed bug on CPC vertical scrolling
Fixed segmentation fault bug when drawing CPC machine
Fixed segmentation fault bug when displaying first aid messages
Fixed bug redrawing zx80/81 display, with realvideo disabled, and menu char width less than 8
Fixed bug drawing menu window boxes when char width less than 8
Fixed zxvision left button handling: no longer sends enter when the user is dragging the window
Fixed machine names to be completely right: for example, "Spectrum 48k" becomes "ZX Spectrum 48k", etc
Fixed saving sprites when memory zone is not default zone
Fixed bug when writing divmmv memory on Chloe machine and underlying RAM in space 0000-3fffh become overwritten